Renamed stylepages to stylesheets and fixed ios spacing for login page

--- a/web/conversion-counter-web/src/stylesheets/LandingPage.css
+++ b/web/conversion-counter-web/src/stylesheets/LandingPage.css
@@ -3,7 +3,7 @@
     display: flex;
     justify-content: center;
     flex-direction: column;
-    height: 90vh;
+    height: 100dvh;
     gap: 20px;
 }
 
